<resources>
    <string name="app_name">auth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to_quoted">Welcome to Quoted!</string>
    <string name="email_address">Email Address</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="sign_in">Sign In</string>

</resources>