<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_purple"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_to_quoted"
        android:textColor="@color/lavender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <TextView
        android:id="@+id/emailAddressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="14sp"
        android:textColor="@color/lavender"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="38dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:hintEnabled="false"
        android:hint="@string/your_email"
        app:boxStrokeColor="@color/text_input_stroke_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="32dp"
        app:cursorColor="@color/lavender_light"
        app:layout_constraintTop_toBottomOf="@id/emailAddressText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/lavender"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:hint="@string/password"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/text_input_stroke_color"
        android:layout_marginHorizontal="32dp"
        app:endIconMode="password_toggle"
        app:cursorColor="@color/lavender_light"
        android:textColorHint="@color/lavender_light"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/lavender"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout" />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/lavender"
        android:text="@string/login"
        android:textColor="@color/royal_purple"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout" />

    <LinearLayout
        android:id="@+id/orViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp">
        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_marginStart="28dp"
            android:layout_gravity="center"
            android:background="@color/lavender_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:layout_marginStart="12dp"
            android:text="@string/or"/>
        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center"
            android:background="@color/lavender_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orViewContainer"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_google"/>
        <ImageView
            android:layout_margin="12dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_phone"/>

    </LinearLayout>

    <!-- Register Text -->
    <LinearLayout
        android:id="@+id/registerEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="124dp">

        <TextView
            android:id="@+id/createAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:textColor="@color/lavender" />

        <TextView
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_one"
            android:textSize="16sp"
            android:textColor="@color/lavender_light"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
