<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/registerRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_purple"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="20sp"
        android:textColor="@color/lavender"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email -->
    <!-- Same as in LoginFragment -->
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/lavender"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/registerText"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:hintEnabled="false"
        android:hint="@string/your_email"
        app:cursorColor="@color/lavender_light"
        app:boxStrokeColor="@color/text_input_stroke_color"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/emailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="@color/lavender_light"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password -->
    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/lavender"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/password"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:cursorColor="@color/lavender_light"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password -->
    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@color/lavender"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="38dp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:boxStrokeColor="@color/text_input_stroke_color"
        android:hint="@string/confirm_password"
        app:cursorColor="@color/lavender_light"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/register"
        android:textColor="@color/royal_purple"
        android:backgroundTint="@color/lavender"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/confirmPasswordLayout" />

    <LinearLayout
        android:id="@+id/orViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp">
        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:layout_marginStart="28dp"
            android:layout_gravity="center"
            android:background="@color/lavender_light"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_light"
            android:layout_marginStart="12dp"
            android:text="@string/or"/>
        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center"
            android:background="@color/lavender_light"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/iconContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/orViewContainer"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/regGoogle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_google"/>
        <ImageView
            android:id="@+id/regPhone"
            android:layout_margin="12dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_phone"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/iconContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="124dp">

        <TextView
            android:id="@+id/createAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/lavender" />

        <TextView
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/lavender_light"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
